force-app/main/default/objects/Target_Achievement__c/Target_Achievement__c.object-meta.xml
<CustomObject>
    <label>Target Achievement</label>
    <nameField>
        <displayFormat>TA-{00000000}</displayFormat>
        <label>Target Achievement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Target Achievements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>