force-app/main/default/objects/Target_Achievement__c/fields/Achievement_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Achievement_Percentage__c</fullName>
    <formula>Achievement_Revenue__c  /   Target_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Achievement Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>