force-app/main/default/objects/Target_Achievement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Achievement_Percentage__c</columns>
    <columns>Achievement_Revenue__c</columns>
    <columns>Average_Order_Value__c</columns>
    <columns>Target_Revenue__c</columns>
    <columns>Total_Orders__c</columns>
    <columns>User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>