force-app/main/default/objects/Target_Achievement__c/listViews/Today_Achievements.listView-meta.xml
<ListView>
    <fullName>Today_Achievements</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Achievement_Percentage__c</columns>
    <columns>Achievement_Revenue__c</columns>
    <columns>Average_Order_Value__c</columns>
    <columns>Target_Revenue__c</columns>
    <columns>Total_Orders__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today Achievements</label>
</ListView>