force-app/main/default/objects/Target_Achievement__c/listViews/Yesterday_Achievements.listView-meta.xml
<ListView>
    <fullName>Yesterday_Achievements</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Achievement_Percentage__c</columns>
    <columns>Achievement_Revenue__c</columns>
    <columns>Average_Order_Value__c</columns>
    <columns>Target_Revenue__c</columns>
    <columns>Total_Orders__c</columns>
    <columns>User__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>Yesterday Achievements</label>
</ListView>